# crypto-demo2

./: .gitignore  CMakeLists.txt  VARX.NOW
src/: JiffyCryptoAnalysis.cxx  JiffyCryptoAnalysis.h  JiffyGenerator.cxx  JiffyGenerator.h  LFSR.cxx  LFSR.h  Phi.cxx  Phi.h  PhiInverse.cxx  PhiInverse.h  main.cpp
